--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,3 +8,5 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons.css';
 
+@import "select2/dist/css/select2.css";
+
