--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,11 +1,10 @@
-
-
 // Variables
 @import 'variables';
 
 // Bootstrap
 @import 'bootstrap/scss/bootstrap';
+
 @import 'bootstrap-icons/font/bootstrap-icons.css';
-
-@import "select2/dist/css/select2.css";
-
+@import "select2/dist/css/select2.min.css";
+@import "select2-bootstrap-5-theme/dist/select2-bootstrap-5-theme.css";
+@import "bootstrap5-toggle/css/bootstrap5-toggle.css"
