select 2 no reuniões,setor em nome do grupo e na index e alterações no app

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,10 @@
 // Variables
 @import 'variables';
 
+@import url('https://fonts.bunny.net/css?family=Nunito');
+
 // Bootstrap
-@import 'bootstrap/scss/bootstrap';
+@import 'bootstrap/scss/bootstrap.scss';
 
 @import 'bootstrap-icons/font/bootstrap-icons.css';
 @import "select2/dist/css/select2.min.css";
