--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,7 +4,10 @@
 
 @import 'bootstrap-icons/font/bootstrap-icons.css';
 
+@import 'bootstrap4-toggle/css/bootstrap4-toggle.min.css';
+
 @import 'bootstrap5-toggle/css/bootstrap5-toggle.min.css';
+
 
 /* @import 'popover/popover.css'; */
 
