--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,8 @@
 
 
 @import url('https://fonts.bunny.net/css?family=Nunito');
+@import "node_modules/@fortawesome/fontawesome-free/css/all.min.css";
+
 
 // Bootstrap
 @import 'bootstrap/scss/bootstrap.scss';
